...
        playlistViewModel.resetTemporaryState()
      }
    }
  }

  Scaffold(
      modifier = Modifier.testTag("createNewPlaylistScreen"),
      topBar = {
        ScreenTopAppBar("Create a new playlist", "createNewPlaylistTitle", navigationActions)
      },
      content = { innerPadding ->
        PlaylistModifierColumn(innerPadding) {
          // Playlist Cover
          PlaylistCover(
              playlistViewModel.coverImage,
...
          CustomInputField(
              value = playlistTitle,
              onValueChange = { playlistViewModel.updateTemporallyTitle(it) },
              label = "Playlist Title *",
              placeholder = "Enter Playlist Title",
              supportingText = "Max $MAX_PLAYLIST_TITLE_LENGTH characters",
              modifier = Modifier.testTag("inputPlaylistTitle"),
              isError = titleError)

          // DESCRIPTION
          CustomInputField(
              value = playlistDescription,
              onValueChange = { playlistViewModel.updateTemporallyDescription(it) },
              label = "Playlist Description",
              placeholder = "Enter Playlist Description",
              singleLine = false,
              supportingText = "Max $MAX_PLAYLIST_DESCRIPTION_LENGTH characters",
              modifier = Modifier.testTag("inputPlaylistDescription"),
              isError = descriptionError)

          Spacer(Modifier.height(0.dp))

          SettingsSwitch("Make Playlist Public", "makePlaylistPublicText", playlistIsPublic) {
            playlistViewModel.updateTemporallyIsPublic(it)
          }

          CollaboratorsSection(
              collabUsernames,
              collabProfileData,
...
                      } else {
                        Log.e("ERROR", "Failed to get userId for username: $usernameToRemove")
                      }
                    })
              })

          PrincipalButton("Create", "createPlaylist") {
            if (titleError || descriptionError) {
              Toast.makeText(context, "Fields not correctly filled", Toast.LENGTH_SHORT).show()
            } else {
              val newPlaylist =
                  Playlist(
                      playlistID = playlistViewModel.getNewUid(),
                      playlistCover = imageCover,
                      playlistName = playlistTitle,
                      playlistDescription = playlistDescription,
                      playlistPublic = playlistIsPublic,
                      userId = playlistViewModel.getUserId() ?: "",
                      playlistOwner = profileData?.username ?: "",
                      playlistCollaborators = playlistCollab,
...
