...
fun BackArrowButton(onClick: () -> Unit) {
  Box(modifier = Modifier.padding(start = 12.dp)) {
    Icon(
        painter = painterResource(id = R.drawable.back_arrow),
        contentDescription = "Go Back",
        tint = Color.Unspecified,
        modifier = Modifier.testTag("goBackButton").size(30.dp).clickable { onClick() })
  }
}

@Composable
fun CheckButton(onClick: () -> Unit) {
  CornerIcons(
...
@Composable
fun CloseButton(onClick: () -> Unit) {
  CornerIcons(
      onClick = onClick,
      icon = Icons.Filled.Close,
      contentDescription = "Close",
      modifier = Modifier.testTag("closeButton"))
}

@Composable
fun EditButton(onClick: () -> Unit) {
  IconButton(onClick) {
    Box(
...
