...
    alignment: Alignment = Alignment.BottomCenter,
    overlayContent: @Composable () -> Unit
) {
  // Semi-transparent background overlay
  Box(
      modifier =
          Modifier.testTag("overlay")
              .fillMaxSize()
              .background(Color.Black.copy(alpha = 0.4f))
              .pointerInput(Unit) { detectTapGestures(onTap = { onDismissRequest() }) },
      contentAlignment = alignment) {
        // Inner box to hold the overlay content
        Box(
...
fun GradientSwitch(checked: Boolean, onCheckedChange: (Boolean) -> Unit) {
  val thumbColor = lightThemeBackground
  val trackColor = if (checked) IconsGradientBrush else SolidColor(PrimaryGray)

  Box(
      modifier =
          Modifier.width(52.dp).height(32.dp).testTag("gradientSwitch").clickable {
            onCheckedChange(!checked)
          }) {
        Canvas(modifier = Modifier.matchParentSize()) {
          drawRoundRect(brush = trackColor, cornerRadius = CornerRadius(16.dp.toPx(), 16.dp.toPx()))
        }

...
